# cmake-examples

.github/workflows/: windows.yml
01-basic/A-hello-cmake/: CMakeLists.txt
